exports[`string() > quoted_string with allowUnknown > parses case 0 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 16
    },
    "value": "foo§abar",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      },
      {
        "inner": {
          "start": 3,
          "end": 4
        },
        "outer": {
          "start": 4,
          "end": 10
        }
      },
      {
        "inner": {
          "start": 4,
          "end": 5
        },
        "outer": {
          "start": 10,
          "end": 12
        }
      }
    ],
    "children": [
      {
        "type": "unicode_escape",
        "kind": "u",
        "range": {
          "start": 4,
          "end": 10
        },
        "raw": "\\\\u00a7",
        "resolved": "",
        "codepoint": 0
      }
    ],
    "quote": "\\""
  },
  "errors": []
}
`;

exports[`string() > quoted_string with nested value parser > parses case 0 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": "foo",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      }
    ],
    "children": [
      {
        "type": "string",
        "range": {
          "start": 1,
          "end": 1
        },
        "value": "",
        "valueMap": [
          {
            "inner": {
              "start": 0,
              "end": 0
            },
            "outer": {
              "start": 1,
              "end": 1
            }
          }
        ],
        "children": []
      }
    ],
    "quote": "\\""
  },
  "errors": [
    {
      "range": {
        "start": 1,
        "end": 1
      },
      "message": "Expected “\\"”",
      "severity": 3
    }
  ]
}
`;

exports[`string() > quoted_string with nested value parser > parses case 1 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 21
    },
    "value": "\\"foo\\\\\\\\bar\\"",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      },
      {
        "inner": {
          "start": 0,
          "end": 1
        },
        "outer": {
          "start": 1,
          "end": 3
        }
      },
      {
        "inner": {
          "start": 1,
          "end": 2
        },
        "outer": {
          "start": 3,
          "end": 9
        }
      },
      {
        "inner": {
          "start": 4,
          "end": 5
        },
        "outer": {
          "start": 11,
          "end": 13
        }
      },
      {
        "inner": {
          "start": 5,
          "end": 6
        },
        "outer": {
          "start": 13,
          "end": 15
        }
      },
      {
        "inner": {
          "start": 9,
          "end": 10
        },
        "outer": {
          "start": 18,
          "end": 20
        }
      }
    ],
    "children": [
      {
        "type": "unicode_escape",
        "kind": "\\"",
        "range": {
          "start": 1,
          "end": 3
        },
        "raw": "\\"",
        "resolved": "\\"",
        "codepoint": 34
      },
      {
        "type": "unicode_escape",
        "kind": "u",
        "range": {
          "start": 3,
          "end": 9
        },
        "raw": "\\\\u0066",
        "resolved": "",
        "codepoint": 0
      },
      {
        "type": "unicode_escape",
        "kind": "\\\\",
        "range": {
          "start": 11,
          "end": 13
        },
        "raw": "\\\\",
        "resolved": "\\\\",
        "codepoint": 92
      },
      {
        "type": "unicode_escape",
        "kind": "\\\\",
        "range": {
          "start": 13,
          "end": 15
        },
        "raw": "\\\\",
        "resolved": "\\\\",
        "codepoint": 92
      },
      {
        "type": "unicode_escape",
        "kind": "\\"",
        "range": {
          "start": 18,
          "end": 20
        },
        "raw": "\\"",
        "resolved": "\\"",
        "codepoint": 34
      },
      {
        "type": "string",
        "range": {
          "start": 1,
          "end": 20
        },
        "value": "foo\\\\bar",
        "valueMap": [
          {
            "inner": {
              "start": 0,
              "end": 0
            },
            "outer": {
              "start": 3,
              "end": 3
            }
          },
          {
            "inner": {
              "start": 0,
              "end": 1
            },
            "outer": {
              "start": 3,
              "end": 9
            }
          },
          {
            "inner": {
              "start": 3,
              "end": 4
            },
            "outer": {
              "start": 11,
              "end": 15
            }
          }
        ],
        "children": [
          {
            "type": "unicode_escape",
            "kind": "\\\\",
            "range": {
              "start": 11,
              "end": 15
            },
            "raw": "\\\\",
            "resolved": "\\\\",
            "codepoint": 92
          }
        ],
        "quote": "\\""
      }
    ],
    "quote": "\\""
  },
  "errors": []
}
`;

exports[`string() > quoted_string with newline and tab escapes > parses case 0 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 0
    },
    "value": "",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ],
    "children": []
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 0
      },
      "message": "Expected “\\"”",
      "severity": 3
    }
  ]
}
`;

exports[`string() > quoted_string with newline and tab escapes > parses case 1 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "foo",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      }
    ],
    "children": [],
    "quote": "\\""
  },
  "errors": [
    {
      "range": {
        "start": 4,
        "end": 4
      },
      "message": "Expected “\\"”",
      "severity": 3
    }
  ]
}
`;

exports[`string() > quoted_string with newline and tab escapes > parses case 2 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": "foo\\n",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      }
    ],
    "children": [],
    "quote": "\\""
  },
  "errors": [
    {
      "range": {
        "start": 5,
        "end": 5
      },
      "message": "Expected “\\"”",
      "severity": 3
    }
  ]
}
`;

exports[`string() > quoted_string with newline and tab escapes > parses case 3 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": "foo",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      }
    ],
    "children": [],
    "quote": "\\""
  },
  "errors": []
}
`;

exports[`string() > quoted_string with newline and tab escapes > parses case 4 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": "foo",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      }
    ],
    "children": [],
    "quote": "'"
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 0
      },
      "message": "Only “\\"” can be used to quote strings here",
      "severity": 3
    }
  ]
}
`;

exports[`string() > quoted_string with newline and tab escapes > parses case 5 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 19
    },
    "value": "foo\\nbar\\t\\"\\\\qux",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      },
      {
        "inner": {
          "start": 3,
          "end": 4
        },
        "outer": {
          "start": 4,
          "end": 6
        }
      },
      {
        "inner": {
          "start": 7,
          "end": 8
        },
        "outer": {
          "start": 9,
          "end": 11
        }
      },
      {
        "inner": {
          "start": 8,
          "end": 9
        },
        "outer": {
          "start": 11,
          "end": 13
        }
      },
      {
        "inner": {
          "start": 9,
          "end": 10
        },
        "outer": {
          "start": 13,
          "end": 15
        }
      }
    ],
    "children": [
      {
        "type": "unicode_escape",
        "kind": "n",
        "range": {
          "start": 4,
          "end": 6
        },
        "raw": "n",
        "resolved": "\\n",
        "codepoint": 10
      },
      {
        "type": "unicode_escape",
        "kind": "t",
        "range": {
          "start": 9,
          "end": 11
        },
        "raw": "t",
        "resolved": "\\t",
        "codepoint": 9
      },
      {
        "type": "unicode_escape",
        "kind": "\\"",
        "range": {
          "start": 11,
          "end": 13
        },
        "raw": "\\"",
        "resolved": "\\"",
        "codepoint": 34
      },
      {
        "type": "unicode_escape",
        "kind": "\\\\",
        "range": {
          "start": 13,
          "end": 15
        },
        "raw": "\\\\",
        "resolved": "\\\\",
        "codepoint": 92
      }
    ],
    "quote": "\\""
  },
  "errors": []
}
`;

exports[`string() > quoted_string with newline and tab escapes > parses case 6 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 16
    },
    "value": "foo§abar",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      },
      {
        "inner": {
          "start": 3,
          "end": 4
        },
        "outer": {
          "start": 4,
          "end": 10
        }
      },
      {
        "inner": {
          "start": 4,
          "end": 5
        },
        "outer": {
          "start": 10,
          "end": 12
        }
      }
    ],
    "children": [
      {
        "type": "unicode_escape",
        "kind": "u",
        "range": {
          "start": 4,
          "end": 10
        },
        "raw": "\\\\u00a7",
        "resolved": "",
        "codepoint": 0
      }
    ],
    "quote": "\\""
  },
  "errors": [
    {
      "range": {
        "start": 11,
        "end": 12
      },
      "message": "Unexpected escape character “a”",
      "severity": 3
    }
  ]
}
`;

exports[`string() > quoted_string with unicode escape and allowUnknown > parses case 0 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 16
    },
    "value": "foo§abar",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      },
      {
        "inner": {
          "start": 3,
          "end": 4
        },
        "outer": {
          "start": 4,
          "end": 10
        }
      },
      {
        "inner": {
          "start": 4,
          "end": 5
        },
        "outer": {
          "start": 10,
          "end": 12
        }
      }
    ],
    "children": [
      {
        "type": "unicode_escape",
        "kind": "u",
        "range": {
          "start": 4,
          "end": 10
        },
        "raw": "\\\\u00a7",
        "resolved": "",
        "codepoint": 0
      }
    ],
    "quote": "\\""
  },
  "errors": []
}
`;

exports[`string() > quoted_string with unicode escape and allowUnknown > parses case 1 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 8
    },
    "value": "uggez",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      },
      {
        "inner": {
          "start": 0,
          "end": 1
        },
        "outer": {
          "start": 1,
          "end": 3
        }
      }
    ],
    "children": [],
    "quote": "\\""
  },
  "errors": [
    {
      "range": {
        "start": 3,
        "end": 7
      },
      "message": "Hexadecimal digit expected",
      "severity": 3
    }
  ]
}
`;

exports[`string() > unquoted_string > parses case 0 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 0
    },
    "value": "",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ],
    "children": []
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 0
      },
      "message": "Expected a string",
      "severity": 3
    }
  ]
}
`;

exports[`string() > unquoted_string > parses case 1 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": "foo",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ],
    "children": []
  },
  "errors": []
}
`;

exports[`string() > unquoted_string > parses case 2 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 0
    },
    "value": "",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ],
    "children": []
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 0
      },
      "message": "Expected a string",
      "severity": 3
    }
  ]
}
`;

exports[`string() > unquoted_string > parses case 3 1`] = `
{
  "node": {
    "type": "string",
    "range": {
      "start": 0,
      "end": 0
    },
    "value": "",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ],
    "children": []
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 0
      },
      "message": "Expected a string",
      "severity": 3
    }
  ]
}
`;
